# rgbd-depth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GIT_SETUP.sh  MANIFEST.in  MIGRATION_SUMMARY.md  NEXT_STEPS.txt  QUICKSTART.md  README.md  SETUP_GUIDE.md  TODO.md  app.py  infer.py  migrate_from_old_repo.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy-hf.yml  publish.yml  test.yml
docs/: CHEATSHEET.md  OPTIMIZATIONS.md  README.md
rgbddepth/: __init__.py  attention.py  cli.py  cli.py.bak  dinov2.py  dpt.py  flexible_attention.py  infer.py  optimization_config.py
rgbddepth/dinov2_layers/: __init__.py  attention.py  block.py
rgbddepth/util/: blocks.py  transform.py
scripts/: example_usage.py  quickstart.sh  test_optimizations.py  verify_installation.py
tests/: test_import.py  test_model.py  test_optimizations.py
